   of 'unrecognized error format')
 - Some services were signing requests with the incorrect strings. Pricing, Opsworks, MarketplaceMetering, MarketplaceEntitlement,
   MarketplaceCommerceAnalytics, DynamoDBStreams, CloudHSMv2, ApplicationAutoScaling and AutoScalingPlans now sign correctly. (autarch)
 - New API: Pricing
 - New API: CostExplorer
 - New API: Translate
 - New API: ServerlessRepo
 - New APIs: SageMaker and SageMakerRuntime
 - New APIs: MediaConvert, MediaLive, MediaPackage, MediaStore, MediaStoreData
 - New APIs: KinesisVideo, KinesisVideoMedia, KinesisVideoArchivedMedia
 - New API: MQ
 - New API: ResourceGroups
 - New API: GuardDuty
 - New API: Comprehend
 - New API: Cloud9
 - New API: AppSync
 - New API: AlexaForBusiness
 - New API: ServiceDiscovery
 - New API: WorkMail
 - New API: Transcribe
 - New API: AutoScalingPlans
 - New API: Connect
 - New API: ACMCPA
 - New API: FMS
 - New API: SecretsManager
 - New API: IoTAnalytics
 - New APIs: IoT1ClickDevices and IOT1ClickProjects
 - New API: PerformanceInsights
 - API updates for any service up to the date of release

0.36 03 Nov 2017
 - Fix Bug: #210: S3 PutObject was not working: the Content-MD5 header was not 
            calculated correctly (glenveegee)
 - Fix Bug: #201: RestJson services were not passing fields in their correct
            locations

0.35 09 Oct 2017
 - Fix Bug: Correctly throw Paws::Exceptions even if there is no information
            in the body / headers (#190 svn-schubert) (#198 ilmari)
 - Work on S3 (sven-schubert)
   - No need to specify ContentMD5 parameter anymore (it gets autocalculated)
   - Added support for responses with properties returned in their payload
 - New API: MobileHub
 - New API: MigrationHub
 - New API: Glue
 - New API: CloudHSMv2
 - API update: Lambda
 - API update: Discovery
 - API update: EC2
 - API update: ApiGateway
 - API update: Autoscaling
 - API update: CognitoIdp
 - API update: AppStream
 - API update: EMR
 - API update: CloudFormation